--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -238,4 +238,9 @@ repo = 'Shougo/deoplete.nvim'
 
 [[plugins]]
 repo = 't9md/vim-quickhl.git'
-
+hook_add = '''
+  nmap <Space>m <Plug>(quickhl-manual-this)
+  xmap <Space>m <Plug>(quickhl-manual-this)
+  nmap <Space>M <Plug>(quickhl-manual-reset)
+  xmap <Space>M <Plug>(quickhl-manual-reset)
+'''
