--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -11,6 +11,7 @@ repo = 'Shougo/defx.nvim'
 hook_add = '''
   nnoremap <silent>   [Space]f
   \ <Cmd>Defx -listed -resume -buffer-name=win-`win_getid()`<CR>
+  nnoremap <silent> ;d :<C-u>Defx -split=vertical -winwidth=40 -search=`expand('%:p')` -direction=topleft `expand('%:p:h')`<CR>
 '''
 hook_source = '''
   call defx#custom#column('mark', {
