--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,24 +37,16 @@ set -g status-fg white
 set -g status-bg black
 
 # ウィンドウリストの色を設定する
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-# アクティブなウィンドウを目立たせる
-setw -g window-status-current-fg black
-setw -g window-status-current-bg blue
-setw -g window-status-current-attr bright
+setw -g window-status-current-style fg=white,bg=blue
+setw -g window-status-style fg=blue,bg=white
 
 # set-option -g status-right '#[fg=red]#(tmux show-options -g prefix) #[fg=cyan][%Y-%m-%d(%a) %H:%M]'
 set-option -sg escape-time 10
 set-option -g default-terminal "tmux-256color"
 
 # ペインボーダーの色を設定する
-set -g pane-border-fg green
-set -g pane-border-bg black
-# アクティブなペインを目立たせる
-set -g pane-active-border-fg white
-set -g pane-active-border-bg green
+set -g pane-active-border-style bg=default,fg=Magenta
+set -g pane-border-style fg=green
 
 ## viのキーバインドを使用する
 setw -g mode-keys vi
