--- a/.config/nvim/deinlazy.toml
+++ b/.config/nvim/deinlazy.toml
@@ -41,17 +41,17 @@ defx = '''
 "  nnoremap <silent><buffer><expr> &       defx#do_action('execute_command', ['', 'async'])
   nnoremap <silent><buffer><expr> m       defx#do_action('move')
   nnoremap <silent><buffer><expr> p       defx#do_action('paste')
-"  nnoremap <silent><buffer><expr> o       defx#do_action('open')
+"  nnoremap <silent><buffer><expr> l       defx#do_action('open')
   nnoremap <silent><buffer><expr> E       defx#do_action('open', 'vsplit')
 "  nnoremap <silent><buffer><expr> L       defx#do_action('link')
 "  nnoremap <silent><buffer><expr> P       defx#do_action('preview')
-  nnoremap <silent><buffer><expr> l       defx#do_action('open_tree', ['nested', 'toggle'])
+  nnoremap <silent><buffer><expr> o       defx#do_action('open_tree', ['nested', 'toggle'])
   nnoremap <silent><buffer><expr> O       defx#do_action('open_tree', 'recursive')
   nnoremap <silent><buffer><expr> K       defx#do_action('new_directory')
   nnoremap <silent><buffer><expr> N       defx#do_action('new_file')
 "  nnoremap <silent><buffer><expr> M       defx#do_action('new_multiple_files')
 "  nnoremap <silent><buffer><expr> C       defx#do_action('toggle_columns', 'mark:filename:type:size:time')
-"  nnoremap <silent><buffer><expr> S       defx#do_action('toggle_sort', 'Time')
+  nnoremap <silent><buffer><expr> S       defx#do_action('toggle_sort', 'Time')
 "  nnoremap <silent><buffer><expr> se      defx#do_action('add_session')
 "  nnoremap <silent><buffer><expr> sl      defx#do_action('load_session')
 "  nnoremap <silent><buffer><expr> d       defx#do_action('remove_trash')
@@ -61,12 +61,12 @@ defx = '''
 "  nnoremap <silent><buffer><expr> <       defx#do_action('change_ignored_files')
 "  nnoremap <silent><buffer><expr> .       defx#do_action('repeat')
   nnoremap <silent><buffer><expr> yy      defx#do_action('yank_path')
-"  nnoremap <silent><buffer><expr> h       defx#do_action('cd', ['..'])
-"  nnoremap <silent><buffer><expr> ~       defx#do_action('cd')
-"  nnoremap <silent><buffer><expr> \       defx#do_action('cd', getcwd())
+  nnoremap <silent><buffer><expr> h       defx#do_action('cd', ['..'])
+  nnoremap <silent><buffer><expr> ~       defx#do_action('cd')
+  nnoremap <silent><buffer><expr> \       defx#do_action('cd', getcwd())
   nnoremap <silent><buffer><expr> q       defx#do_action('quit')
-"  nnoremap <silent><buffer><expr> <Space> defx#do_action('toggle_select') . 'j'
-"  nnoremap <silent><buffer><expr> *       defx#do_action('toggle_select_all')
+  nnoremap <silent><buffer><expr> <Space> defx#do_action('toggle_select') . 'j'
+  nnoremap <silent><buffer><expr> *       defx#do_action('toggle_select_all')
   nnoremap <silent><buffer><expr> j       line('.') == line('$') ? 'gg' : 'j'
   nnoremap <silent><buffer><expr> k       line('.') == 1 ? 'G' : 'k'
 "  nnoremap <silent><buffer><expr> <C-l>   defx#do_action('redraw')
