--- a/.config/nvim/deinlazy.toml
+++ b/.config/nvim/deinlazy.toml
@@ -112,18 +112,18 @@ hook_add = '''
   nnoremap <silent><expr> S wordcount().chars > 30000 ?
   \ "\<Cmd>DeniteCursorWord -buffer-name=search -search line/external\<CR>" :
   \ "\<Cmd>DeniteCursorWord -buffer-name=search -search line\<CR>"
-  nnoremap <silent> s<Space> <Cmd>Denite -buffer-name=files  file/rec:'`fnamemodify(expand('$MYVIMRC'), ':h').'/rc'`'<CR>
-  nnoremap <silent> sf       <Cmd>Denite -buffer-name=files -resume<CR>
+"  nnoremap <silent> s<Space> <Cmd>Denite -buffer-name=files  file/rec:'`fnamemodify(expand('$MYVIMRC'), ':h').'/rc'`'<CR>
+"  nnoremap <silent> sf       <Cmd>Denite -buffer-name=files -resume<CR>
   nnoremap <silent> ;f       <Cmd>Denite file_mru<CR>
   nnoremap <silent> ;b       <Cmd>Denite buffer<CR>
-  nnoremap <silent> sn       <Cmd>Denite dein<CR>
-  nnoremap <silent> sg       <Cmd>Denite ghq -default-action=cd<CR>
+"  nnoremap <silent> sn       <Cmd>Denite dein<CR>
+"  nnoremap <silent> sg       <Cmd>Denite ghq -default-action=cd<CR>
   nnoremap <silent> ;g       <Cmd>Denite -buffer-name=search -no-empty grep<CR>
   nnoremap <silent> ;w       <Cmd>DeniteCursorWord -buffer-name=search -no-empty grep<CR>
   nnoremap <silent> t        <Cmd>Denite -buffer-name=search -resume<CR>
-  nnoremap <silent> <C-t>    <Cmd>Denite -buffer-name=deol
-  \ -split=`has('nvim') ? 'floating' : 'horizontal'`
-  \ -cursor-pos=`tabpagenr()-1` deol:zsh<CR>
+"  nnoremap <silent> <C-t>    <Cmd>Denite -buffer-name=deol
+"  \ -split=`has('nvim') ? 'floating' : 'horizontal'`
+"  \ -cursor-pos=`tabpagenr()-1` deol:zsh<CR>
   nnoremap <silent> <C-k> <Cmd>Denite change jump<CR>
 '''
 
