--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -54,5 +54,5 @@ hook_add = '''
 repo = 'altercation/vim-colors-solarized.git'
 hook_add = '''
   let g:solarized_termtrans=1
-  call togglebg#map('<F3>')
+  " call togglebg#map('<F3>')
 '''
